--- a/playbooks/deployVNFHA.yml
+++ b/playbooks/deployVNFHA.yml
@@ -3,7 +3,7 @@
   hosts: localhost
   gather_facts: False
   vars_files:
-    - ../variables.yml
+    - ../variablesHA.yml
   tasks:
     - name: Deploy Active PA-VM VNF
       vmware_guest:
