--- a/playbooks/preparePassiveBootstrappingISO.yml
+++ b/playbooks/preparePassiveBootstrappingISO.yml
@@ -3,7 +3,7 @@
   hosts: localhost
   gather_facts: False
   vars_files:
-    - ../variables.yml
+    - ../variablesHA.yml
   tasks:
     - name: Create the bootstrapping directory structure
       file:
