Modify scaling playbooks

--- a/playbooks/deactivateLicense.yml
+++ b/playbooks/deactivateLicense.yml
@@ -12,3 +12,5 @@
         password: "{{ lic.password }}"
         auto: True
         api_key: "{{ lic.api_key }}"
+    - pause:
+        seconds: 10
