--- a/playbooks/prepareEnvironmentHA.yml
+++ b/playbooks/prepareEnvironmentHA.yml
@@ -3,7 +3,7 @@
   hosts: localhost
   gather_facts: False
   vars_files:
-    - ../variablesHA.yml
+    - ../variables.yml
   tasks:
     - name: Create Resource Pool
       vmware_resource_pool:
