--- a/deploy.yml
+++ b/deploy.yml
@@ -1,4 +1,4 @@
 ---
-#- import_playbook: playbooks/prepareBootstrappingISO.yml
-#- import_playbook: playbooks/prepareEnvironment.yml
+- import_playbook: playbooks/prepareBootstrappingISO.yml
+- import_playbook: playbooks/prepareEnvironment.yml
 - import_playbook: playbooks/deployVNF.yml
